gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__diamond_variable_width_parallel.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ███████████████                                                    "
"           ╭─██████N1███████─╮                                                  "
"     █████ │ ███████████████ │ █████                                            "
"     █N0██─┤                 ├─█N3██                                            "
"     █████ │   ██████████    │ █████                                            "
"           ╰───███N2█████────╯                                                  "
"               ██████████                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
