gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__double_chain.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"             █████ █████ █████ █████ █████ █████ █████ █████                                                            "
"           ╭─█N1██─█N2██─█N3██─█N4██─█N5██─█N6██─█N7██─█N8██─╮                                                          "
"     █████ │ █████ █████ █████ █████ █████ █████ █████ █████ │ █████                                                    "
"     █N0██─┤                                                 ├─█N9██                                                    "
"     █████ │ █████ █████ █████ █████ █████ █████ █████ █████ │ █████                                                    "
"           ╰─█N10█─█N11█─█N12█─█N13█─█N14█─█N15█─█N16█─█N17█─╯                                                          "
"             █████ █████ █████ █████ █████ █████ █████ █████                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
