gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__extended_complex_dag_layer_partitioning.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                       █████                                                    "
"                   ╭───█N3██───╮                                                "
"             █████ │   █████   │ █████                                          "
"           ╭─█N1██─┤           ├─█N6██─╮                                        "
"     █████ │ █████ ╰─╮ █████ ╭─╯ █████ │ █████ █████                            "
"     █N0██─┤         ├─█N4██─┤         ├─█N8██─█N9██                            "
"     █████ │ █████ ╭─╯ █████ ╰─╮ █████ │ █████ █████                            "
"           ╰─█N2██─┤           ├─█N7██─╯                                        "
"             █████ │   █████   │ █████                                          "
"                   ╰───█N5██───╯                                                "
"                       █████                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
