gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__extended_diamond_node_partitioning.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             █████           █████                                              "
"           ╭─█N1██─╮       ╭─█N4██─╮                                            "
"     █████ │ █████ │ █████ │ █████ │ █████ █████                                "
"     █N0██─┤       ├─█N3██─┤       ├─█N6██─█N7██                                "
"     █████ │ █████ │ █████ │ █████ │ █████ █████                                "
"           ╰─█N2██─╯       ╰─█N5██─╯                                            "
"             █████           █████                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
