gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__pinned_source_cycle_partitioned.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████    "
"   ╭▶█N6██─█N7██─█N8██─█N9██─█N10█─█N11█─█N0██─█N1██─█N2██─█N3██─█N4██─█N5██─╮  "
"   │ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ │  "
"   │                                                                         │  "
"   ╰───◀───────────────◀───────────────◀───────────────◀───────────────◀─────╯  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
