gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__self_loop.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"     █████                                                  "
"   ╭─█N0██─╮                                                "
"   │ █████ │                                                "
"   │       │                                                "
"   ╰───◀───╯                                                "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
